stumped by a bug: 'H' not showing up unless there's been another action or condition

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -655,3 +655,8 @@ strong {
 .clickable_area {
     pointer-events: auto;
 }
+
+.contextMenuItem {
+    background-color: yellow;
+    padding: 5px;
+}
